<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Get Color</string>

    <string name="changePointerColor">Change pointer color</string>

    <string name="saveColor">Save color</string>
    <string name="getColorFromImage">Color from image</string>
    <string name="takeAPhoto">Take a photo</string>
    <string name="getSavedColors">Saved colors</string>

    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="hex">Hex</string>

    <string name="errorColor">ERROR: unknown color</string>

    <string name="colorSaved">Color saved</string>

    <string name="delete">Delete</string>

    <string name="alreadySavedColor">ERROR: Already saved color</string>

    <string name="noColorSaved">No color saved</string>

    <string name="yourPictures">Photos taken</string>

    <string name="saveInTheGallery">Save</string>

    <string name="noPicture">No picture</string>

    <string name="imageSaved">Image saved in the gallery</string>

    <string name="error">ERROR</string>

    <string name="otherOptions">Other options</string>

    <string name="confirm">Confirm</string>

    <string name="chooseAColor">Choose a color</string>

    <string name="defaultColors">Default colors</string>

    <string name="customColor">Custom color</string>

    <string name="cpv_default_title">Select a Color</string>
    <string name="cpv_presets">Presets</string>
    <string name="cpv_custom">Custom</string>
    <string name="cpv_select">Select</string>
    <string name="cpv_transparency">Transparency</string>
</resources>
