<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/redText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/red"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"/>

        <TextView
            android:id="@+id/greenText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/green"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"/>

        <TextView
            android:id="@+id/blueText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/green"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"/>

        <SeekBar
            android:id="@+id/seekRed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="255"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/redText"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"/>

        <SeekBar
            android:id="@+id/seekGreen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:max="255"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greenText"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"/>

        <SeekBar
            android:id="@+id/seekBlue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:max="255"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blueText"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.1"/>

        <View
            android:id="@+id/color"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekGreen" />

        <EditText
            android:id="@+id/editTextRed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/red"
            android:inputType="textNoSuggestions|number"
            android:text="0"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.15"/>

        <EditText
            android:id="@+id/editTextGreen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="textNoSuggestions|number"
            android:text="0"
            android:hint="@string/green"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.15"/>

        <EditText
            android:id="@+id/editTextBlue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="textNoSuggestions|number"
            android:text="0"
            android:hint="@string/blue"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextGreen"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.15"/>

        <EditText
            android:id="@+id/editTextHex"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textNoSuggestions"
            android:text="000000"
            android:hint="@string/hex"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextGreen"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.15" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextHex">

            <Button
                android:id="@+id/other"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/button_background"
                android:text="@string/otherOptions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.7"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:theme="@style/NavigationDrawerStyle"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_header"/>

</android.support.v4.widget.DrawerLayout>
